Fixed topic card spacing issue in topics page

--- a/src/app/shared/components/topic-card/topic-card.component.scss
+++ b/src/app/shared/components/topic-card/topic-card.component.scss
@@ -15,6 +15,8 @@
   .header-image {
     height: 180px;
     width: 100%;
+    min-height: 180px;
+    min-width: 350px;
     margin-bottom: 20px;
     border-bottom: 1px solid #f3f3f3;
   }
